SERVER-67796 Persist the result of doCompactOperation in the compaction coordinator