src/mongo/db/s/shardsvr_compact_structured_encryption_data_command.cpp
@@ -77,19 +77,27 @@ public:
         using InvocationBase::InvocationBase;
 
         Reply typedRun(OperationContext* opCtx) {
-            FixedFCVRegion fixedFcvRegion(opCtx);
 
-            auto compact = makeRequest(opCtx);
-            if (!compact) {
+            auto compactCoordinator =
+                [&]() -> std::shared_ptr<CompactStructuredEncryptionDataCoordinator> {
+                FixedFCVRegion fixedFcvRegion(opCtx);
+
+                auto compact = makeRequest(opCtx);
+                if (!compact) {
+                    return nullptr;
+                }
+                return checked_pointer_cast<CompactStructuredEncryptionDataCoordinator>(
+                    ShardingDDLCoordinatorService::getService(opCtx)->getOrCreateInstance(
+                        opCtx, compact->toBSON()));
+            }();
+
+            if (!compactCoordinator) {
                 // Nothing to do.
                 LOGV2(6548305, "Skipping compaction as there is no ECOC collection to compact");
                 return CompactStats({}, {}, {});
             }
 
-            return checked_pointer_cast<CompactStructuredEncryptionDataCoordinator>(
-                       ShardingDDLCoordinatorService::getService(opCtx)->getOrCreateInstance(
-                           opCtx, compact->toBSON()))
-                ->getResponse(opCtx);
+            return compactCoordinator->getResponse(opCtx);
         }
 
     private:
@@ -116,6 +124,14 @@ public:
             }
 
             CompactStructuredEncryptionDataState compact;
+            auto coordinatorType = DDLCoordinatorTypeEnum::kCompactStructuredEncryptionData;
+
+            if (serverGlobalParams.featureCompatibility.isLessThan(
+                    multiversion::FeatureCompatibilityVersion::kVersion_6_1)) {
+                // TODO SERVER-68373 remove once 7.0 becomes last LTS
+                coordinatorType =
+                    DDLCoordinatorTypeEnum::kCompactStructuredEncryptionDataPre61Compatible;
+            }
 
             if (ecocColl.getCollection()) {
                 compact.setEcocUuid(ecocColl->uuid());
@@ -124,8 +140,7 @@ public:
                 compact.setEcocRenameUuid(ecocTempColl->uuid());
             }
 
-            compact.setShardingDDLCoordinatorMetadata(
-                {{nss, DDLCoordinatorTypeEnum::kCompactStructuredEncryptionData}});
+            compact.setShardingDDLCoordinatorMetadata({{nss, coordinatorType}});
             compact.setEscNss(namespaces.escNss);
             compact.setEccNss(namespaces.eccNss);
             compact.setEcocNss(namespaces.ecocNss);
